fixed light/dark mode issues, place colors

--- a/client/src/screens/Vietcong.css
+++ b/client/src/screens/Vietcong.css
@@ -15,6 +15,9 @@
   --card-count-shadow-color: #FEDE62;
   --current-turn-bg-color: rgba(0, 255, 0, 0.1);
   --current-turn-border-color: #00FF00;
+  --first-place-color: #FFD700;
+  --second-place-color: #C0C0C0;
+  --third-place-color: #CD7F32;
 }
 
 [data-theme='dark'] {
@@ -34,6 +37,9 @@
   --card-count-shadow-color: #FFEA00;
   --current-turn-bg-color: rgba(57, 255, 20, 0.1);
   --current-turn-border-color: #39FF14;
+  --first-place-color: #FFD700;
+  --second-place-color: #C0C0C0;
+  --third-place-color: #CD7F32;
 }
 
 body {
